src/objects/Address__c.object
<CustomObject>
    <fields>
        <fullName>APO_Zip_Code__c</fullName>
        <description>Army Post Office Zip Code for the Customer&apos;s Address</description>
        <inlineHelpText>Army Post Office Zip Code for the Customer&apos;s Address</inlineHelpText>
        <label>APO Zip Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <description>First Line of Address</description>
        <inlineHelpText>First Line of the Address for the Customer&apos;s Address</inlineHelpText>
        <label>Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <description>The second line of the Customer&apos;s address</description>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_3__c</fullName>
        <label>Address Line 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Nickname__c</fullName>
        <description>The nickname for the Customer&apos;s Address</description>
        <inlineHelpText>This field can be used to distinguish a Customer&apos;s various addresses by nickname.</inlineHelpText>
        <label>Address Nickname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <description>Type of address</description>
        <inlineHelpText>This field can be used to designate a Customer&apos;s address as either Billing or Shipping</inlineHelpText>
        <label>Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City for the Customer&apos;s Address</description>
        <inlineHelpText>City for the Customer&apos;s Address</inlineHelpText>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Picklist__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>UNITED STATES</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>AFGHANISTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBANIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALGERIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMERICAN SAMOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDORRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGOLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGUILLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTIGUA &amp; BARBUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARGENTINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARMENIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARUBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASCENSION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZERBAIJAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZORES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHAMAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHRAIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANGLADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARBADOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELARUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELGIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELIZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERMUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHUTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOLIVIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BONAIRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSNIA AND HERZEGOVINA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country for the Customer&apos;s Address</description>
        <inlineHelpText>Country for the Customer&apos;s Address</inlineHelpText>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Delivery_Instructions__c</fullName>
        <label>Delivery Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foreign_Country_Code__c</fullName>
        <label>Foreign Country Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foreign_Postal_Code__c</fullName>
        <label>Foreign Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>International_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field denotes an international (Non-US) address</description>
        <inlineHelpText>This field denotes an international (Non-US) address</inlineHelpText>
        <label>International Address?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field denotes the address as a PO Box</description>
        <inlineHelpText>This field denotes the address as a PO Box</inlineHelpText>
        <label>PO Box?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pending_Avalara_Response__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Pending Avalara Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Bill_To_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This designates the primary Billing address for the Customer.</description>
        <inlineHelpText>Check this box to designate that this address is the primary Billing address for the Customer.</inlineHelpText>
        <label>Primary Bill To Address?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Ship_to_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This designates the primary Shipping address for the Customer.</description>
        <inlineHelpText>Check this box to designate that this address is the primary Shipping address for the Customer.</inlineHelpText>
        <label>Primary Ship To Address?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_Commercial__c</fullName>
        <label>Residential / Commercial</label>
        <picklist>
            <picklistValues>
                <fullName>C-Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R-Residential</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Standardized_Address__c</fullName>
        <description>Customer ID + Address Line 1 + Address Line 2 + City + State + Postal Code + Country</description>
        <externalId>true</externalId>
        <label>Standardized Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Providence__c</fullName>
        <description>State or Province for the Customer&apos;s Address</description>
        <inlineHelpText>State or Province for the Customer&apos;s Address</inlineHelpText>
        <label>State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Validation_Error_Reason__c</fullName>
        <description>Stores validation error description from Avalara Address Validation service.</description>
        <label>Validation Error Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this box is checked, validation service will not overwrite the address data</description>
        <label>Validation Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_Code_4__c</fullName>
        <label>Zip Code 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>Zip Code for the Customer&apos;s Address</description>
        <inlineHelpText>Zip Code for the Customer&apos;s Address</inlineHelpText>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Customer__c</columns>
        <columns>Address_Line_1__c</columns>
        <columns>State_Providence__c</columns>
        <columns>City__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Address_Lines_NULL</fullName>
        <active>true</active>
        <description>The address lines 1-3 cannot all be blank.</description>
        <errorConditionFormula>AND(
 Address_Line_1__c = NULL,
 Address_Line_2__c = NULL,
 Address_Line_3__c = NULL
)</errorConditionFormula>
        <errorDisplayField>Address_Line_1__c</errorDisplayField>
        <errorMessage>The address must have a value on lines 1, 2, or 3.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Canada_State_Code</fullName>
        <active>true</active>
        <description>Validates the Province Code for Canadian Addresses</description>
        <errorConditionFormula>IF( 
(AND(
Country__c = &quot;CA&quot;, Country__c = &quot;CAN&quot;, Country__c = &quot;CANADA&quot;) ),
( NOT (OR (State_Providence__c = &quot;AB&quot;,State_Providence__c = &quot;BC&quot;, State_Providence__c = &quot;MB&quot;, State_Providence__c = &quot;NB&quot;, State_Providence__c = &quot;NL&quot;, State_Providence__c = &quot;NT&quot;, State_Providence__c = &quot;NS&quot;, State_Providence__c = &quot;NU&quot;, State_Providence__c = &quot;ON&quot;, State_Providence__c = &quot;PE&quot;, State_Providence__c = &quot;QC&quot;, State_Providence__c = &quot;SK&quot;, State_Providence__c = &quot;YT&quot;))), NULL)</errorConditionFormula>
        <errorDisplayField>State_Providence__c</errorDisplayField>
        <errorMessage>For Canadian Addresses, there needs to be a valid 2 digit Province</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>City_NULL</fullName>
        <active>true</active>
        <description>The City cannot be blank for USA address.</description>
        <errorConditionFormula>AND(City__c = NULL,
    OR (Country__c = NULL, Country__c = &quot;US&quot;, Country__c = &quot;USA&quot;, Country__c = &quot;United States&quot;, Country__c = &quot;UNITED STATES,UNITES STATES OF AMERICA&quot;))</errorConditionFormula>
        <errorDisplayField>City__c</errorDisplayField>
        <errorMessage>The City cannot be blank for USA address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Country_NULL</fullName>
        <active>false</active>
        <description>The Address must have a country.</description>
        <errorConditionFormula>Country__c = NULL</errorConditionFormula>
        <errorDisplayField>Country__c</errorDisplayField>
        <errorMessage>The Address must include a Country</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Primary_Billing</fullName>
        <active>true</active>
        <description>If an address is designated &quot;Primary Billing&quot; Billing must be selected as address type.</description>
        <errorConditionFormula>AND(
Primary_Bill_To_Address__c = TRUE, 
NOT( INCLUDES( Address_Type__c , &quot;Billing&quot;) ) )</errorConditionFormula>
        <errorDisplayField>Address_Type__c</errorDisplayField>
        <errorMessage>If a address has been designated &quot;Primary Bill To Address&quot; it must also be a &quot;Billing&quot; Address Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Primary_Shipping</fullName>
        <active>true</active>
        <description>If an address is designated &quot;Primary Ship To&quot;, Shipping must be selected as address type.</description>
        <errorConditionFormula>AND(
 Primary_Ship_to_Address__c  = TRUE, 
NOT( INCLUDES( Address_Type__c , &quot;Shipping&quot;) ) )</errorConditionFormula>
        <errorDisplayField>Address_Type__c</errorDisplayField>
        <errorMessage>If a address has been designated &quot;Primary Ship To Address&quot; it must also be a &quot;Shipping&quot; Address Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>US_State_Code</fullName>
        <active>true</active>
        <description>If the Country is &quot;US&quot;, the Address must have a valid 2-digit State Code.</description>
        <errorConditionFormula>IF( 
AND(Country__c = &quot;US&quot;, Country__c = &quot;USA&quot;, Country__c = &quot;United States&quot;), NOT(OR(State_Providence__c = &quot;AK&quot;, State_Providence__c = &quot;AL&quot;, State_Providence__c = &quot;AR&quot;,State_Providence__c = &quot;AZ&quot;,State_Providence__c = &quot;CA&quot;,State_Providence__c = &quot;CO&quot;, State_Providence__c = &quot;CT&quot;, State_Providence__c = &quot;DC&quot;, State_Providence__c = &quot;DE&quot;, State_Providence__c = &quot;MO&quot;, State_Providence__c = &quot;MS&quot;, State_Providence__c = &quot;MT&quot;, State_Providence__c = &quot;NC&quot;,State_Providence__c = &quot;ND&quot;, State_Providence__c = &quot;NE&quot;, State_Providence__c = &quot;NH&quot;, State_Providence__c = &quot;NJ&quot;, State_Providence__c = &quot;NM&quot;, State_Providence__c = &quot;FL&quot;, State_Providence__c = &quot;GA&quot;, State_Providence__c = &quot;HI&quot;, State_Providence__c = &quot;IA&quot;, State_Providence__c = &quot;ID&quot;, State_Providence__c = &quot;IL&quot;, State_Providence__c = &quot;IO&quot;, State_Providence__c = &quot;NV&quot;, State_Providence__c = &quot;NY&quot;, State_Providence__c = &quot;OH&quot;, State_Providence__c = &quot;OK&quot;, State_Providence__c = &quot;OR&quot;, State_Providence__c = &quot;PA&quot;, State_Providence__c = &quot;PR&quot;, State_Providence__c = &quot;IN&quot;, State_Providence__c = &quot;KS&quot;,State_Providence__c = &quot;KY&quot;,State_Providence__c = &quot;LA&quot;, State_Providence__c = &quot;MA&quot;,State_Providence__c = &quot;MD&quot;,State_Providence__c = &quot;ME&quot;, State_Providence__c = &quot;MI&quot;, State_Providence__c = &quot;MN&quot;, State_Providence__c = &quot;RI&quot;,State_Providence__c = &quot;SC&quot;, State_Providence__c = &quot;SD&quot;, State_Providence__c = &quot;TN&quot;, State_Providence__c = &quot;TX&quot;, State_Providence__c = &quot;UT&quot;, State_Providence__c = &quot;VA&quot;, State_Providence__c = &quot;VI&quot;, State_Providence__c = &quot;WA&quot;, State_Providence__c = &quot;WV&quot;, State_Providence__c = &quot;WI&quot;, State_Providence__c = &quot;WY&quot;) ), NULL)</errorConditionFormula>
        <errorDisplayField>State_Providence__c</errorDisplayField>
        <errorMessage>If the Country is &quot;US&quot;, the Address must have a valid 2-digit State Code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Zip_Code_NULL</fullName>
        <active>true</active>
        <description>The Zip Code cannot be blank for US address.</description>
        <errorConditionFormula>AND(Zip_Code__c = NULL,
    OR (Country__c = NULL, Country__c = &quot;US&quot;, Country__c = &quot;USA&quot;, Country__c = &quot;United States&quot;, Country__c = &quot;UNITED STATES,UNITES STATES OF AMERICA&quot;))</errorConditionFormula>
        <errorDisplayField>Zip_Code__c</errorDisplayField>
        <errorMessage>The Zip Code cannot be blank for USA address.</errorMessage>
    </validationRules>
</CustomObject>